k8s/mariadb.yml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb
spec:
  containers:
    - name: mariadb
      image: mariadb:10.7
      volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
  volumes:
    - name: mysql-storage
      persistentVolumeClaim:
        claimName: pvc-mysql
