k8s/backend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
spec:
  selector:
    matchLabels:
      app: backend-kube
#  replicas: 3
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-kube
    spec:
      containers:
        - name: backend-container
          image: toki0327/k8s-b612-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-ser
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8080
  selector:
    app: backend-kube
