k8s/backend-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-ser
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8080
  selector:
    app: backend-kube
