k8s/frontend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
spec:
  selector:
    matchLabels:
      app: frontend-kube
#  replicas: 3
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-kube
    spec:
      containers:
        - name: frontend-container
          image: toki0327/k8s-b612-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-ser
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 80
  selector:
    app: frontend-kube
