k8s/frontend-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-ser
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 80      # 5173에서 80으로 변경
  selector:
    app: frontend-kube
