k8s/mariadb-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.7
          args: ["--port=3307"]  # 포트를 3307로 실행
          ports:
            - containerPort: 3307
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: mariadb-pvc
        - name: init-script
          configMap:
            name: db-init-script
            items:
              - key: init.sql
                path: init.sql
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - port: 3307
      targetPort: 3307
  type: ClusterIP
