k8s/mariadb-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - port: 3307
      targetPort: 3307
  type: ClusterIP
