k8s/redis-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: b612-redis-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: b612-redis
  template:
    metadata:
      labels:
        app: b612-redis
    spec:
      containers:
        - name: redis
          image: toki0327/b612-redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: b612-redis
spec:
  selector:
    app: b612-redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
