k8s/redis-ser.yml
apiVersion: v1
kind: Service
metadata:
  name: b612-redis
spec:
  selector:
    app: b612-redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
